# linwatch

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh  opencode.json
.codegraph/: daemon.pid
.github/workflows/: ci.yml  release.yml
src/: collector.rs  main.rs  state.rs  types.rs
src/ui/: common.rs  cpu.rs  footer.rs  gpu.rs  header.rs  help.rs  memory.rs  mod.rs  network.rs  overview.rs  processes.rs  storage.rs  theme.rs
