[package]
name = "linwatch"
version = "0.1.1"
edition = "2021"
description = "Lightweight Linux TUI monitor with root-cause insights, event timeline, and JSON automation."
readme = "README.md"
keywords = ["linux", "monitor", "tui", "observability", "ratatui"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/digitalninjanv/linwatch"
homepage = "https://github.com/digitalninjanv/linwatch"

[dependencies]
ratatui = "0.30"
crossterm = "0.27"
libc = "0.2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
